services/blog-dev/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: devblog
    role: worker
  name: devblog-worker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: devblog
      role: worker
  template:
    metadata:
      labels:
        app: devblog
        role: worker
    spec:
      volumes:
      - name: public
        persistentVolumeClaim:
          claimName: techblog-assets
      - name: images
        persistentVolumeClaim:
          claimName: image-assets
      - name: content
        emptyDir: {}
      containers:
      - image: ghcr.io/takutakahashi/blog.tpl:v1.1.0
        imagePullPolicy: Always
        name: worker
        volumeMounts:
        - mountPath: /src/public
          name: public
        - mountPath: /src/images
          name: images
        - mountPath: /src/content/posts
          name: content
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: devblog
    role: web
  name: devblog-web
  namespace: blog
spec:
  replicas: 1
  selector:
    matchLabels:
      app: devblog
      role: web
  template:
    metadata:
      labels:
        app: devblog
        role: web
    spec:
      volumes:
      - name: public
        persistentVolumeClaim:
          claimName: techblog-assets
      - name: tmp
        emptyDir: {}
      - name: nginx
        configMap:
          name: devblog-nginx
      containers:
      - image: ubuntu
        imagePullPolicy: Always
        command:
          - bash
          - -c
          - "while true; do cp -r /src/* /dst/ ; sleep 10; done"
        name: worker
        volumeMounts:
        - mountPath: /src
          name: public
        - mountPath: /dst
          name: tmp
      - image: nginx
        imagePullPolicy: Always
        name: server
        volumeMounts:
        - mountPath: /usr/share/nginx/html
          name: public
        - mountPath: /etc/nginx/conf.d
          name: nginx
