services/blog-dev/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: devblog
    role: web
  name: devblog-web
  namespace: blog
spec:
  type: ClusterIP
  ports:
  - name: devblog
    protocol: TCP
    port: 80
  selector:
    app: devblog
    role: web
