services/blog-dev/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: devblog
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - www.takutakahashi.dev
    secretName: devblog-tls-secret
  rules:
  - host: www.takutakahashi.dev
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: devblog-web
            port:
              number: 80
